--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
     <title>contacto</title>
 </head>
 <body>
- <h1>correo: carmona.jireth@gmail.com</h1>   
+ <h1>correo: carmona.jireth@gmail.com</h1>  
+ <p>Estudiante</p> 
 </body>
 </html>
